--- a/Views/Progetto/Edit.cshtml
+++ b/Views/Progetto/Edit.cshtml
@@ -113,15 +113,15 @@
                             </div>
                             <div class="panel panel-sidebar">
                                 <div class="panel-heading">
-                                    <a data-toggle="collapse" href="#Nessus">
-                                        <strong>NESSUS</strong>
+                                    <a data-toggle="collapse" href="#Server">
+                                        <strong>Server esterno</strong>
                                         <span class="caret"></span>
                                     </a><br>
                                 </div>
-                                <div class="collapse" id="Nessus">
+                                <div class="collapse" id="Server">
                                     <div class="panel-body ">
                                         <div class="col-sm-12">
-                                            <h4>Seleziona i moduli NESSUS</h4><hr />
+                                            <h4>Seleziona i moduli server esterni</h4><hr />
                                         </div>
                                         <table class="table">
                                             <div class="method">
@@ -141,7 +141,7 @@
                                             <tbody>
                                                 @for (int i = 0; i < Model.ListaModuliConTarget.Count; i++)
                                                 {
-                                                    if (Model.ListaModuliConTarget[i].Applicazione != webmva.Models.APPLICAZIONE.NESSUS) { continue; }
+                                                    if (Model.ListaModuliConTarget[i].Applicazione != webmva.Models.APPLICAZIONE.SERVER) { continue; }
                                                     <tr>
                                                         <td>
                                                             @Html.CheckBoxFor(model => model.ListaModuliConTarget[i].Inserito)
@@ -153,7 +153,7 @@
                                                             @Html.DisplayFor(model => model.ListaModuliConTarget[i].Comando)
                                                         </td>
                                                         <td>
-                                                            @Html.TextBoxFor(model => model.ListaModuliConTarget[i].Target, new { placeholder = "Per i moduli NESSUS non è necessario", @class = "col-md-10", disabled = "true" })
+                                                            @Html.TextBoxFor(model => model.ListaModuliConTarget[i].Target, new { placeholder = "Per i moduli Server non è necessario", @class = "col-md-10", disabled = "true" })
                                                             @Html.HiddenFor(model => model.ListaModuliConTarget[i].ModuloID)
                                                             @Html.HiddenFor(model => model.ListaModuliConTarget[i].Applicazione)
                                                         </td>
